Fix header inline-block overflow on smallest screen (mobile)

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -3,7 +3,7 @@
     top: 0;
     z-index: 1; //set z-index to keep on top of other page elements.
     width: 100%;
-    height: 75px;
+    height: 5.5em;
     background: $dark-blue;
     border-bottom: 4px solid $dark-gray;
 }
@@ -16,7 +16,7 @@
         display: inline-block;
         position: relative;
         vertical-align: top;
-        min-width: 100px;
+        min-width: 7.6em;
         a{
             display: inline-block;
         }
@@ -24,9 +24,9 @@
             position: absolute;
             top: 0;
             left: 50%;
-            width: 110px;
-            height: 110px;
-            margin-left: -55px;
+            width: 7.8em;
+            height: 7.8em;
+            margin-left: -(7.8em/2);
             border-bottom: 6px solid $mid-dark-gray;
             background: $mid-light-gray;
         }
@@ -45,4 +45,14 @@
             padding-top: 1.1em;
         }
     }
+}
+
+
+/* Responsive: below portrait tablets */
+@media screen and (max-width: 768px) {
+
+    .header{
+        font-size: 0.7em;
+    }
+
 }
